# drug-admin-api

./: README.md  package-lock.json  tasks.txt
drug-admin-backend/: alembic.ini  makefile  pyproject.toml
drug-admin-backend/app/: main.py  routes.py  schemas.py  services.py
drug-admin-backend/app/alembic/versions/: 613b4b91132e_first_migration.py  7a515a5f2b0d_first_migration.py
drug-admin-backend/app/db/: connection.py  database  drugs-database  models.py  repository.py
drug-admin-backend/app/schemas/: schemas.py
drug-admin-backend/app/utils/: exceptions.py
drug-admin-frontend/: index.html  package-lock.json  package.json
drug-admin-frontend/src/: App.css  App.js  App.tsx
drug-admin-frontend/src/components/confirm-modal/: ConfirmModal.css  ConfirmModal.tsx
drug-admin-frontend/src/components/create-form/: CreateForm.tsx
drug-admin-frontend/src/components/edit-modal/: EditModal.css  EditModal.tsx
drug-admin-frontend/src/components/footer/: Footer.css  Footer.tsx
drug-admin-frontend/src/components/header/: Header.css  Header.tsx
drug-admin-frontend/src/components/search-bar/: SearchBar.css  SearchBar.tsx
drug-admin-frontend/src/components/table/: Table.css  Table.tsx
